[package]
name = "siweapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
siwe = "0.5"
ethers = "0.17.0"
hex = "0.4"
async-std = { version = "1.10", features = ["attributes"] }
sha3 = "0.10.2"
actix-web = "3"
serde = "1.0.154"
actix-cors = "0.5.4"
jsonrpc-core = "18.0.0"