[package]
name = "siweapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
siwe = "0.5"
ethers = "0.17.0"
hex = "0.4"
sha3 = "0.10.2"
serde = "1.0"
serde_json = "1.0"
axum = "0.4.3"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
