[package]
name = "siwe-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
ethers = { version = "1.0.2", features = ["abigen", "legacy", "ws"] }
web-sys = "0.3"
tokio = { version = "1", features = ["full"] }
